<?xml version="1.0" encoding="utf-8"?>
<!--
 * Assignment: Homework 02
 * Vaijyant Tomar
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btnAddPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:color/background_light"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/add_photo" />

        <EditText
            android:id="@+id/editFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAddPhoto"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/editFirst"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editLast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editFirst"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/editLast"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editLast"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/editCompany"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editCompany"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/editPhone"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editPhone"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/editEmail"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editEmail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/editURL" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editUrl"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/editAddress"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editAddress"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/editBirthday"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editBirthday"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/editNickname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editFacebookProfileURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editNickname"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/editFacebookProfileURL"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTwiterProfileURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editFacebookProfileURL"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/editTwitterProfileURL"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editSkype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTwiterProfileURL"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/editSkype"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editYouTubeChannel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editSkype"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/editYouTubeChannel"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editYouTubeChannel"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/btnSave"
            android:textAllCaps="false" />

    </RelativeLayout>
</ScrollView>
