<?xml version="1.0" encoding="utf-8"?>
<!--
 * Assignment: Homework 02
 * FileName: activity_detailed_contact.xml
 * Vaijyant Tomar
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:color/background_light"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/add_photo" />

        <TextView
            android:id="@+id/viewFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgPhoto"
            android:layout_toEndOf="@+id/textFirst"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewLast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/viewFirst"
            android:layout_alignStart="@+id/viewFirst"
            android:layout_below="@+id/viewFirst"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/viewLast"
            android:layout_below="@+id/viewLast"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/viewCompany"
            android:layout_below="@+id/viewCompany"
            android:layout_toEndOf="@+id/textCompany"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/viewCompany"
            android:layout_below="@+id/viewPhone"
            android:layout_toEndOf="@+id/textPhone"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/viewCompany"
            android:layout_below="@+id/viewEmail"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/viewUrl"
            android:layout_below="@+id/viewUrl"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/viewAddress"
            android:layout_below="@+id/viewAddress"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/viewBirthday"
            android:layout_below="@+id/viewBirthday"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewFacebookProfileURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/viewNickname"
            android:layout_below="@+id/viewNickname"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewTwitterProfileURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/viewFacebookProfileURL"
            android:layout_below="@+id/viewFacebookProfileURL"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewSkype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/viewTwitterProfileURL"
            android:layout_below="@+id/viewTwitterProfileURL"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewYouTubeChannel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/viewSkype"
            android:layout_below="@+id/viewSkype"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textFirst"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textLast"
            android:layout_alignStart="@+id/textLast"
            android:text="@string/editFirst"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textLast"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/viewLast"
            android:layout_alignBottom="@+id/viewLast"
            android:layout_alignStart="@+id/textCompany"
            android:text="@string/editLast"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textCompany"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textPhone"
            android:layout_below="@+id/textLast"
            android:text="@string/editCompany"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textPhone"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textEmail"
            android:layout_below="@+id/textCompany"
            android:text="@string/editPhone"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textUrl"
            android:layout_alignStart="@+id/textUrl"
            android:layout_below="@+id/textPhone"
            android:text="@string/editEmail"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textUrl"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textAddress"
            android:layout_below="@+id/textEmail"
            android:text="@string/editURL"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textAddress"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textBithday"
            android:layout_below="@+id/textUrl"
            android:text="@string/editAddress"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textBithday"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textNickname"
            android:layout_below="@+id/textAddress"
            android:text="@string/editBirthday"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textNickname"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textfbUrl"
            android:layout_below="@+id/textBithday"
            android:text="@string/editNickname"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textfbUrl"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textTwitter"
            android:layout_below="@+id/textNickname"
            android:text="@string/lblFacebook"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textTwitter"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textSkype"
            android:layout_below="@+id/textfbUrl"
            android:text="@string/lblTwitter"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textSkype"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textTwitter"
            android:layout_marginStart="11dp"
            android:text="@string/editSkype"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textYoutube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textSkype"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textSkype"
            android:text="@string/lblYouTube"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </RelativeLayout>
</ScrollView>
